[CHORE] Add comprehensive ISO 21502 and PMI PMBOK project management documentation
Added complete project management framework aligned with:
- ISO 21502:2020 Project Management Guidance (11/11 requirements)
- PMI PMBOK 7th Edition Agile Practices (9/9 practices)
- GitHub Best Practices (9/9 features)

New documentation files:
- GOVERNANCE.md - Project governance framework
- CHANGE_MANAGEMENT.md - Change control process
- RISK_REGISTER.md - Risk identification and tracking
- STAKEHOLDER_REGISTER.md - Stakeholder analysis
- COMMUNICATION_PLAN.md - Communication strategy
- RACI_MATRIX.md - Responsibility assignment matrix
- WORK_BREAKDOWN_STRUCTURE.md - WBS with full scope decomposition
- SPRINT_PLANNING.md - Sprint management guide
- SPRINT_RETROSPECTIVE.md - Retrospective template
- DEFINITION_OF_DONE.md - Quality standards checklist
- RELEASE_CHECKLIST.md - Release process
- LESSONS_LEARNED.md - Knowledge management register

New issue templates:
- enhancement.md - Enhancement requests
- chore.md - Maintenance tasks
- security.md - Security issues
- refactoring.md - Code refactoring
- testing.md - Test coverage tasks

Updated:
- PROJECT_MANAGEMENT_SETUP.md - Added documentation index and updated compliance
- config.yml - Added project board and contributing links

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -9,3 +9,9 @@ contact_links:
   - name: Documentation
     url: https://github.com/VibeTensor/IssueFlow#readme
     about: Read the project documentation
+  - name: Project Board
+    url: https://github.com/orgs/VibeTensor/projects/2
+    about: View project roadmap and sprint progress
+  - name: Contributing Guide
+    url: https://github.com/VibeTensor/IssueFlow/blob/master/CONTRIBUTING.md
+    about: Learn how to contribute to IssueFlow
